# intel_mkl_pardiso_eigen_solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
pardiso/: Pardiso.cpp  Pardiso.hpp  test.cpp
